--- a/about.html
+++ b/about.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" conten qt="" />
-    <meta name="author" content="" />
 
-    <title>Visualizing the Housing Crisis</title>
+<head>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Site Metas -->
+  <meta name="keywords" content="" />
+  <meta name="description" conten qt="" />
+  <meta name="author" content="" />
 
-    <!-- fonts style -->
+  <title>Visualizing the Housing Crisis</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Libre Baskerville"
-      rel="stylesheet"
-    />
-    <!-- Custom styles for this template -->
-    <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
+  <!-- fonts style -->
 
-    <!-- google icons -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
-    />
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=PT+Sans+Narrow:wght@700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Libre Baskerville" rel="stylesheet" />
+  <!-- Custom styles for this template -->
+  <link href="staticFiles/css/style_v3.css" rel="stylesheet" />
 
-  <body>
-    <nav id="navbar" class="nav-bar">
-      <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
-      <!-- <ul>
+  <!-- google icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+</head>
+
+<body>
+  <nav id="navbar" class="nav-bar">
+    <h4>&nbsp; &nbsp;<a href="index.html">← Back to Narrative</a></h4>
+    <!-- <ul>
       <li id="Intro">
         <span class="hover-image">
           <img src="staticFiles\images\nav_icon\intro.svg" />
@@ -82,7 +77,7 @@
         <a href="#imagine_future">Imagine a Better Future</a>
       </li>
     </ul> -->
-    </nav>
+  </nav>
 
   <div class="blank"></div>
   <!-- Introduction -->
@@ -108,14 +103,20 @@
         nonprofit
         capacity.</p>
       <h2>Rui Li</h2>
-      <p><a href="https://github.com/Rui-Li-UCB" target="blank">Rui Li</a> is a recent graduate from UC Berkeley with an emphasis on data
+      <p><a href="https://github.com/Rui-Li-UCB" target="blank">Rui Li</a> is a recent graduate from UC Berkeley with an
+        emphasis on data
         science, geospatial analysis, and healthcare applications. In the
         summer of 2022, Rui interned at Freenome as a clinical informatics
         data scientist.</p>
       <h2>Gareen Puglia</h2>
-      <p>Gareen recently graduated from UC Berkeley with a Masters in Information Management and Systems with a Graduate
-        Certificate in New Media from the Berkeley Center for New Media. Before her graduate studies, Gareen worked in
-        journalism and digital media as a Story Producer.</p>
+      <p>Gareen Simone Puglia is a storyteller from Southern California. She recently graduated from UC Berkeley with a
+        Masters
+        in Information Management and Systems with a Graduate Certificate in New Media from the Berkeley Center for New
+        Media.
+        Before her graduate studies, Gareen worked in journalism and digital media as a Story Producer. You can read her
+        <a href="https://gareensimonepuglia.wixsite.com/website">published work here</a> and reach out to her on <a
+          href="https://www.linkedin.com/in/gareen-puglia-3a4651173/" target="_">LinkedIn.</a>
+      </p>
       <h2>Ian Castro</h2>
       <p><a href="https://castroian.github.io/" target="_">Ian Castro</a> is an applied data scientist with a background
         in
@@ -129,87 +130,84 @@
         and
         zoning reform in California among others.</p>
 
-        <h1>Our Partners</h1>
-        <h3>Othering and Belonging Institute</h3>
-        <p>
-          <a href="https://belonging.berkeley.edu/housing" target="_"
-            >UC Berkeley’s Othering and Belonging Institute</a
-          >
-          is a group dedicated to advancing research that transforms structural
-          marginalization and inequality. This institute is composed of a
-          coalition of scholars, community organizers, researchers, artists, and
-          communicators.
-        </p>
-        <h3>Eviction Research Network</h3>
-        <p>
-          <a href="https://evictionresearch.net/" target="_"
-            >The Eviction Research Network</a
-          >
-          is a UC Berkeley research group under the larger Urban Displacement
-          Project that focuses on collecting, analyzing, and mapping the
-          demographics of eviction. Described as “a collaborative research
-          project for social good,” the ERN is to increase public awareness of
-          the prevalence and drivers of eviction nationwide, particularly in
-          understudied regions.
-        </p>
-        <h3>RichmondLAND</h3>
-        <p>
-          <a href="https://www.richmondland.org/">Richmond LAND</a> is a
-          member-based organization whose mission is to build community power
-          and maintain long-term affordability by holding land and properties in
-          a community land trust. Through grassroots community organizing, land
-          acquisition, and housing development, Richmond LAND removes land from
-          the speculative real estate market to create pathways for affordable
-          housing and lasting community benefit.
-        </p>
-
-        <h1>Acknowledgements</h1>
-        <p>
-          So many people and organizations contributed to our project. We would
-          like to highlight them all with our deepest gratitude.
-        </p>
-        <p>
-          Thank you to our faculty advisor Professor Morgan Ames, for being a
-          constant source of support and an extremely positive sounding board.
-          Thank you for providing us with such incredible feedback and for
-          making this process such an enjoyable one.
-        </p>
-        <p>
-          Thank you to Professor Steve Fadden, who provided our team with
-          incredible guidance on our UX Research. Thank you for teaching us the
-          power of listening and for being so generous with your time.
-        </p>
-        <p>
-          Thank you to our research partners: OBI, ERN, and Richmond LAND. We
-          are thankful for the opportunity to collaborate and realize our goal
-          with their support and willingness to share data and speak to our
-          team. We hope to have advanced their goals through our work.
-        </p>
-        <p>
-          Thank you to everyone we spoke to for our informational interviews—
-          the insight and information we gained from each discussion was
-          invaluable to our work. Thank you for taking the time to talk with us
-          about your work and what you would like to see in the housing space.
-          Our narrative is informed by your insight and feedback.
-        </p>
-        <p>
-          Thank you to the ISchool community and faculty— we are very touched by
-          the support we have received and have been motivated by the passion of
-          our peers. We hope we have been able to teach you all as much as you
-          have taught us.
-        </p>
-      </div>
-    </div>
-    <div class="blank_sm"></div>
-    <div class="footer">
-      <p style="text-align: center">
-        <a href="about.html">About</a> |
-        <a href="sources.html">Sources & Methods</a> |
-        <a href="index.html">Back to Narrative</a>
+      <h1>Our Partners</h1>
+      <h3>Othering and Belonging Institute</h3>
+      <p>
+        <a href="https://belonging.berkeley.edu/housing" target="_">UC Berkeley’s Othering and Belonging Institute</a>
+        is a group dedicated to advancing research that transforms structural
+        marginalization and inequality. This institute is composed of a
+        coalition of scholars, community organizers, researchers, artists, and
+        communicators.
       </p>
-      Visualizing the Housing Crisis is a capstone project for Masters of
-      Information Management at the School of Information, University of
-      California, Berkeley.
+      <h3>Eviction Research Network</h3>
+      <p>
+        <a href="https://evictionresearch.net/" target="_">The Eviction Research Network</a>
+        is a UC Berkeley research group under the larger Urban Displacement
+        Project that focuses on collecting, analyzing, and mapping the
+        demographics of eviction. Described as “a collaborative research
+        project for social good,” the ERN is to increase public awareness of
+        the prevalence and drivers of eviction nationwide, particularly in
+        understudied regions.
+      </p>
+      <h3>RichmondLAND</h3>
+      <p>
+        <a href="https://www.richmondland.org/">Richmond LAND</a> is a
+        member-based organization whose mission is to build community power
+        and maintain long-term affordability by holding land and properties in
+        a community land trust. Through grassroots community organizing, land
+        acquisition, and housing development, Richmond LAND removes land from
+        the speculative real estate market to create pathways for affordable
+        housing and lasting community benefit.
+      </p>
+
+      <h1>Acknowledgements</h1>
+      <p>
+        So many people and organizations contributed to our project. We would
+        like to highlight them all with our deepest gratitude.
+      </p>
+      <p>
+        Thank you to our faculty advisor Professor Morgan Ames, for being a
+        constant source of support and an extremely positive sounding board.
+        Thank you for providing us with such incredible feedback and for
+        making this process such an enjoyable one.
+      </p>
+      <p>
+        Thank you to Professor Steve Fadden, who provided our team with
+        incredible guidance on our UX Research. Thank you for teaching us the
+        power of listening and for being so generous with your time.
+      </p>
+      <p>
+        Thank you to our research partners: OBI, ERN, and Richmond LAND. We
+        are thankful for the opportunity to collaborate and realize our goal
+        with their support and willingness to share data and speak to our
+        team. We hope to have advanced their goals through our work.
+      </p>
+      <p>
+        Thank you to everyone we spoke to for our informational interviews—
+        the insight and information we gained from each discussion was
+        invaluable to our work. Thank you for taking the time to talk with us
+        about your work and what you would like to see in the housing space.
+        Our narrative is informed by your insight and feedback.
+      </p>
+      <p>
+        Thank you to the ISchool community and faculty— we are very touched by
+        the support we have received and have been motivated by the passion of
+        our peers. We hope we have been able to teach you all as much as you
+        have taught us.
+      </p>
     </div>
-  </body>
+  </div>
+  <div class="blank_sm"></div>
+  <div class="footer">
+    <p style="text-align: center">
+      <a href="about.html">About</a> |
+      <a href="sources.html">Sources</a> |
+      <a href="index.html">Back to Narrative</a>
+    </p>
+    Visualizing the Housing Crisis is a capstone project for Masters of
+    Information Management at the School of Information, University of
+    California, Berkeley.
+  </div>
+</body>
+
 </html>
