--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
         earlier, some of these solutions can seem to be in direct conflict.
       </p>
       <p>
-        <span class="emphasis_red">Click on the circles</span> in the chart
+        <span class="emphasis_red">Click or hover on the circles</span> in the chart
         below to learn more about different solutions.
       </p>
     </div>
@@ -711,9 +711,9 @@
       <p>
         Thank you for allowing us to educate you on the housing crisis. If you
         are feeling empowered and ready to do more, we’ve compiled a list of
-        next steps. We invite you to <b>peak through the windows</b> of the
-        multi-family dwelling below to learn what actionable steps you can
-        take to facilitate a future of affordable housing for all. We’re all
+        next steps. We invite you to <b>click on each window</b> of the
+        multi-family home below to reveal an action you can take to help facilitate a future of
+        affordable housing for all. We’re all
         on this journey together.
       </p>
     </div>
