--- a/index.html
+++ b/index.html
@@ -277,53 +277,41 @@
         represents the overall trend.
       </p>
       <br />
-      <div class="evc_section_narrow" style="padding: 0; column-gap: 2vw">
-        <div class="content_narrow">
-          <div class="tableauPlaceholder" id="viz1683249159917" style="position: relative">
-            <noscript><a href="#"><img alt="Majority Race by Tract (2021) versus Evictions  (Jan 2017- Mar 2022) "
-                  src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;Eviction_Map_Update&#47;Sheet1&#47;1_rss.png"
-                  style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
-              <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
-              <param name="embed_code_version" value="3" />
-              <param name="path"
-                value="views&#47;Eviction_Map_Update&#47;Sheet1?:language=en-US&amp;:embed=true&amp;publish=yes" />
-              <param name="toolbar" value="yes" />
-              <param name="static_image"
-                value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;Eviction_Map_Update&#47;Sheet1&#47;1.png" />
-              <param name="animate_transition" value="yes" />
-              <param name="display_static_image" value="yes" />
-              <param name="display_spinner" value="yes" />
-              <param name="display_overlay" value="yes" />
-              <param name="display_count" value="yes" />
-              <param name="language" value="en-US" />
-              <param name="filter" value="publish=yes" />
-            </object>
-          </div>
-          <script type="text/javascript">
-            var divElement = document.getElementById("viz1683249159917");
-            var vizElement = divElement.getElementsByTagName("object")[0];
-            vizElement.style.width = "100%";
-            vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
-            var scriptElement = document.createElement("script");
-            scriptElement.src =
-              "https://public.tableau.com/javascripts/api/viz_v1.js";
-            vizElement.parentNode.insertBefore(scriptElement, vizElement);
-          </script>
+      <div class="content_center">
+
+        <div class="tableauPlaceholder" id="viz1683249159917" style="position: relative">
+          <noscript><a href="#"><img alt="Majority Race by Tract (2021) versus Evictions  (Jan 2017- Mar 2022) "
+                src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;Eviction_Map_Update&#47;Sheet1&#47;1_rss.png"
+                style="border: none" /></a></noscript><object class="tableauViz" style="display: none">
+            <param name="host_url" value="https%3A%2F%2Fpublic.tableau.com%2F" />
+            <param name="embed_code_version" value="3" />
+            <param name="path"
+              value="views&#47;Eviction_Map_Update&#47;Sheet1?:language=en-US&amp;:embed=true&amp;publish=yes" />
+            <param name="toolbar" value="yes" />
+            <param name="static_image"
+              value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ev&#47;Eviction_Map_Update&#47;Sheet1&#47;1.png" />
+            <param name="animate_transition" value="yes" />
+            <param name="display_static_image" value="yes" />
+            <param name="display_spinner" value="yes" />
+            <param name="display_overlay" value="yes" />
+            <param name="display_count" value="yes" />
+            <param name="language" value="en-US" />
+            <param name="filter" value="publish=yes" />
+          </object>
         </div>
-        <div class="image_box_med">
-          <p style="text-align: left">
-            This map shows neighborhoods with the highest levels of recorded
-            evictions:
-            <span style="color: var(--blue); font-weight: bold">the Iron Triangle</span>,
-            <span style="font-weight: bold">Panhandle, and Hilltop.</span>
-            These neighborhoods are predominantly Black and Hispanic. The
-            current housing landscape places the vulnerable - who are often
-            racial minorities - in precarious situations rather than support
-            them.
-          </p>
-        </div>
+        <script type="text/javascript">
+          var divElement = document.getElementById("viz1683249159917");
+          var vizElement = divElement.getElementsByTagName("object")[0];
+          vizElement.style.width = "100%";
+          vizElement.style.height = divElement.offsetWidth * 0.75 + "px";
+          var scriptElement = document.createElement("script");
+          scriptElement.src =
+            "https://public.tableau.com/javascripts/api/viz_v1.js";
+          vizElement.parentNode.insertBefore(scriptElement, vizElement);
+        </script>
+
       </div>
-      <br />
+
       <br />
       <br />
       <p>
