--- a/index.html
+++ b/index.html
@@ -375,8 +375,9 @@
         every White eviction.
       </p>
       <br />
+      <div style="display:flex; justify-content:center;">
       <img src="staticFiles\images\eviction_map\eviction_rate_iso.svg"
-        style="width: 60%; position: relative; left: 22.5%" />
+        style="width: 55vw;" /></div>
       <div class="content_center" style="padding-top: 80px; display: flex; justify-content: center">
         <div class="tableauPlaceholder" id="viz1683250275111" style="position: relative">
           <noscript><a href="#"><img alt="Yearly evictions in Richmond, CA by race (Jan. 2017 - Mar. 2022) "
