--- a/index.html
+++ b/index.html
@@ -705,10 +705,9 @@
       <p>
         Thank you for allowing us to educate you on the housing crisis. If you
         are feeling empowered and ready to do more, we’ve compiled a list of
-        next steps. We invite you to <b>peak through the windows</b> of the
-        multi-family dwelling below to learn what actionable steps you can
-        take to facilitate a future of affordable housing for all. We’re all
-        on this journey together.
+        next steps. We invite you to <b>click on each window</b> of the
+        multi-family home below to reveal an action you can take to help facilitate a future of
+        affordable housing for all. We’re all on this journey together.
       </p>
     </div>
   </div>
