Update to about

--- a/about.html
+++ b/about.html
@@ -149,22 +149,20 @@
         the prevalence and drivers of eviction nationwide, particularly in
         understudied regions.
       </p>
-      <h3>RichmondLAND</h3>
-      <p>
-        <a href="https://www.richmondland.org/">Richmond LAND</a> is a
-        member-based organization whose mission is to build community power
-        and maintain long-term affordability by holding land and properties in
-        a community land trust. Through grassroots community organizing, land
-        acquisition, and housing development, Richmond LAND removes land from
-        the speculative real estate market to create pathways for affordable
-        housing and lasting community benefit.
-      </p>
 
       <h1>Acknowledgements</h1>
       <p>
         So many people and organizations contributed to our project. We would
         like to highlight them all with our deepest gratitude.
       </p>
+      <p>
+        Special thanks to Kaitlyn Quackenbush and everyone at <a href="https://www.richmondland.org/">Richmond LAND</a>
+        for having many conversations with us, grounding us in the local context of Richmond. Richmond LAND is a
+        member-based organization whose mission is to build community power
+        and maintain long-term affordability by holding land and properties in
+        a community land trust.
+      </p>
+
       <p>
         Thank you to our faculty advisor Professor Morgan Ames, for being a
         constant source of support and an extremely positive sounding board.
